prevent horizontal scrolling on fullscreen

--- a/client/src/styling/tabs.css
+++ b/client/src/styling/tabs.css
@@ -1,4 +1,5 @@
 .tabStyle {
+  overflow-x: hidden;
   position: absolute;
   font-family: 'Julius Sans One', sans-serif;
   letter-spacing: -0.05em;
